initial HTML CSS done.  Still need to work on spacing and fixing header, everything else is how I like it so far, one hour to go

--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,18 @@ footer nav a {
 .header-image #about-page {
     width: 100%;
     object-fit: fill;
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
+ }
+
+.about-top {
+    padding: 2%;
+ }
+
+ .firstrow {
+     display: flex;
+ }
+
+ .secondrow {
+     display: flex;
+ }
+
+
